--- a/.vscodeignore
+++ b/.vscodeignore
@@ -1,4 +1,12 @@
 node_modules
 .editorconfig
 .gitattributes
+.vscode/**
+.vscode-test/**
+out/test/**
+test/**
+src/**
+**/*.map
 .gitignore
+tsconfig.json
+vsc-extension-quickstart.md
