--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "wx-fc-vscode-snippets",
-  "version": "0.0.4",
-  "displayName": "VSCode Daily Snippets & Tasks",
+  "name": "dd-vscode-snippets",
+  "version": "0.0.5",
+  "displayName": "VSCode Snippets & Tasks for Docs and Development",
   "description": "A collection of essentials snippets for Visual Studio Code.",
   "publisher": "wx-chevalier",
   "icon": "images/logo.png",
@@ -9,13 +9,13 @@
     "color": "#333333",
     "theme": "dark"
   },
-  "homepage": "https://github.com/wx-chevalier/@wx-fc/vscode-snippets/blob/master/README.md",
+  "homepage": "https://github.com/wx-chevalier/@m-fe/vscode-snippets/blob/master/README.md",
   "repository": {
     "type": "git",
-    "url": "https://github.com/wx-chevalier/@wx-fc/vscode-snippets.git"
+    "url": "https://github.com/wx-chevalier/@m-fe/vscode-snippets.git"
   },
   "bugs": {
-    "url": "https://github.com/wx-chevalier/@wx-fc/vscode-snippets/issues"
+    "url": "https://github.com/wx-chevalier/@m-fe/vscode-snippets/issues"
   },
   "categories": [
     "Snippets",
@@ -26,7 +26,7 @@
     "Task"
   ],
   "engines": {
-    "vscode": "^0.10.0"
+    "vscode": "^1.50.0"
   },
   "scripts": {
     "build": "vsce package",
@@ -84,11 +84,11 @@
     ]
   },
   "devDependencies": {
-    "vsce": "1.44.0",
-    "@types/node": "^8.0.0",
-    "tslint": "^5.16.0",
-    "typescript": "^3.5.1",
-    "@types/vscode": "^1.32.0"
+    "vsce": "1.81.1",
+    "@types/node": "^14.11.10",
+    "tslint": "^6.1.3",
+    "typescript": "^4.0.3",
+    "@types/vscode": "^1.50.0"
   },
   "license": "SEE LICENSE IN LICENSE"
 }
